--- a/CodeDungeon/Assembly-CSharp.csproj
+++ b/CodeDungeon/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
+    <Compile Include="Assets\Scripts\MapLayoults.cs" />
     <Compile Include="Assets\Scripts\Tile.cs" />
     <Compile Include="Assets\Scripts\SideBlock.cs" />
     <Compile Include="Assets\Scripts\GridManager.cs" />
