--- a/CodeDungeon/Packages/manifest.json
+++ b/CodeDungeon/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.4.0",
     "com.unity.mobile.notifications": "2.3.0",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
