Coco salvando depois de limpa

--- a/CodeDungeon/Assembly-CSharp.csproj
+++ b/CodeDungeon/Assembly-CSharp.csproj
@@ -61,7 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\DataPersistence\IDataPersistence.cs" />
+    <Compile Include="Assets\Scripts\Bosta.cs" />
     <Compile Include="Assets\OldGame\Scripts\TochLight.cs" />
+    <Compile Include="Assets\Scripts\AnimationCoinGain.cs" />
     <Compile Include="Assets\Scripts\FoodOpt.cs" />
     <Compile Include="Assets\Scripts\Balao.cs" />
     <Compile Include="Assets\DataPersistence\FileDataHandler.cs" />
