--- a/CodeDungeon/Assembly-CSharp.csproj
+++ b/CodeDungeon/Assembly-CSharp.csproj
@@ -63,22 +63,21 @@
     <Compile Include="Assets\Scripts\BuyFood.cs" />
     <Compile Include="Assets\DataPersistence\IDataPersistence.cs" />
     <Compile Include="Assets\Scripts\Bosta.cs" />
+    <Compile Include="Assets\Minigames\1_PasseioNoCeu\Minigames1Spawn.cs" />
     <Compile Include="Assets\Scripts\Vazilha.cs" />
     <Compile Include="Assets\Scripts\DebugSpeedUP.cs" />
     <Compile Include="Assets\OldGame\Scripts\TochLight.cs" />
     <Compile Include="Assets\Scripts\AnimationCoinGain.cs" />
     <Compile Include="Assets\Scripts\FoodOpt.cs" />
     <Compile Include="Assets\Scripts\Balao.cs" />
-    <Compile Include="Assets\Scripts\MinigamesOpt.cs" />
     <Compile Include="Assets\DataPersistence\FileDataHandler.cs" />
     <Compile Include="Assets\Scripts\Character.cs" />
+    <Compile Include="Assets\Minigames\1_PasseioNoCeu\MinigamesOpt.cs" />
     <Compile Include="Assets\OldGame\Scripts\Tile.cs" />
     <Compile Include="Assets\Scripts\Game.cs" />
     <Compile Include="Assets\Minigames\1_PasseioNoCeu\Priquito_Mini1.cs" />
     <Compile Include="Assets\OldGame\Scripts\BottomSheetTab.cs" />
-    <Compile Include="Assets\Scripts\Minigames1Enemie.cs" />
     <Compile Include="Assets\OldGame\Scripts\MapLayoults.cs" />
-    <Compile Include="Assets\Scripts\Minigames1Spawn.cs" />
     <Compile Include="Assets\Scripts\CloseMinigames.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\BanhoOpt.cs" />
@@ -89,6 +88,7 @@
     <Compile Include="Assets\Scripts\NewEgg.cs" />
     <Compile Include="Assets\Scripts\GiveFood.cs" />
     <Compile Include="Assets\OldGame\Scripts\GridManager.cs" />
+    <Compile Include="Assets\Minigames\1_PasseioNoCeu\Minigames1Enemie.cs" />
     <Compile Include="Assets\Scripts\Egg.cs" />
     <Compile Include="Assets\OldGame\Scripts\SideBlock.cs" />
     <Compile Include="Assets\DataPersistence\DataPersistenceManager.cs" />
